<resources>
    <string name="app_name">Онкологический тест</string>
    <string name="start_test_now">Пройди тест на рак прямо СЕЙЧАС!</string>
    <string name="person_hint">Ваше имя, фамилия и отчество</string>
    <string name="your_gender">Ваш пол</string>
    <string name="man">мужской</string>
    <string name="woman">Женский</string>
    <string name="hint_location">Место жительства в настоящее время</string>
    <string name="date_format">дд/мм/гггг</string>
    <string name="birth_date">Дата рождения</string>
    <string name="button_text_start_test">Пройти тест</string>
    <string name="please_fill_the_fields">Пожалуйста, заполните все полей</string>
    <string name="button_text_restart">Начать заново</string>
    <string name="button_text_continue">Продолжить</string>
    <string name="please_answer_for_all_questions">Пожалуйста, ответьте на все вопросы</string>
    <string name="label_activity_result">Результат</string>
    <string name="result_description">Вы сделали простой и одновременно важный шаг в заботе о своем здоровье! Вы заполнили анкету и получили информацию о том, какие факторы онкологического риска у вас есть. Для того, чтобы исключить возникновение заболевания, необходимо обратиться к своему участковому терапевту и пройти медицинское обследование.</string>
    <string name="error">Произошла ошибка. Просим прощение за неудобство</string>
</resources>
